# splashscreen

./: CMakeLists.txt  package.xml  setup.py
scripts/: mouse_capture.py  splashscreen.py
